{
    "name": "MouseActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a554ddba-05a5-4473-a8b5-ff1c9702a178",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "932f360c-1ec3-45a4-ad10-655efa4336ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "b2418d66-4f72-4715-be6a-79e2de6d23aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "14499e5d-3bb3-42c5-81bf-409e0da9f1ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c64be50d-9fd6-45c0-bbe2-b63a79951064",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91b27762-a4e8-496b-a1dc-eb9abeb56959",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b7cf193-ece2-419e-b085-9363dba2b1c3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}